<resources>
    <string name="app_name">WheelsAge.org</string>

    <string name="update_wallpaper">Update wallpaper now</string>
    <string name="shared_preferences_main">main</string>
    <string name="status_download_picture_info">Download picture information ...</string>
    <string name="status_error">Error: %s</string>
    <string name="status_picture_same">Picture still same</string>
    <string name="status_download_picture">Download picture %s ...</string>
    <string name="status_converting">Converting ...</string>
    <string name="status_setting_wallpaper">Setting as wallpaper ...</string>
    <string name="status_complete">Complete</string>
    <string name="error_json_downlod_failed">Picture information download failed</string>
    <string name="wifi_only_summary">For mobile data traffic may incur additional fees</string>
    <string name="wifi_only_title">Download via wi-fi &amp; ethernet only</string>
    <string name="mode_title">Mode</string>
    <string name="mode_summary">Select one preffered</string>
    <string name="menu_settings">Settings</string>
    <string name="version">Version</string>
    <string name="last_picture_name">Last installed picture</string>

</resources>
