<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Режим работы">

        <ListPreference
            android:key="mode"
            android:title="@string/mode_title"
            android:summary="@string/mode_summary"
            android:entries="@array/mode_entries"
            android:entryValues="@array/mode_entry_values"
            android:defaultValue="0" />

        <CheckBoxPreference
            android:key="wifi_only"
            android:title="@string/wifi_only_title"
            android:summary="@string/wifi_only_summary"
            android:defaultValue="true" />

        <Preference
            android:key="last_picture_name"
            android:title="@string/last_picture_name"

            android:defaultValue="None"/>

        <EditTextPreference
            android:key="version"
            android:title="@string/version"
            android:enabled="false"
            android:selectable="false"
            android:persistent="false"
            android:shouldDisableView="false"/>

    </PreferenceCategory>

</PreferenceScreen>